# vrooem-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
.claude/: WORKFLOW_SETUP.md  settings.json
.codex-venv/: pyvenv.cfg
app/: main.py
app/core/: auth.py  (+3 more)
contracts/: search-vehicle-v1.schema.json
data/: unified_locations.json  unified_locations.json.bak
migrations/: env.py
scripts/: local-refresh-locations.sh  parse_locauto_excel.py  rebuild_locations.py
tests/: test_adapter_registry.py  test_adobe_car_adapter.py  test_booking_service.py  test_cache_service.py  test_database_url.py  test_dropoff_location_contract.py  test_easirent_reference.py  test_favrica_adapter.py  test_green_motion_adapter.py  test_host_bootstrap.py  test_internal_adapter.py  test_json_location_repository.py  test_location_json_refresh_service.py  test_location_normalization.py  test_location_sync_service.py  test_location_sync_timeout.py  test_location_unification_service.py  test_locauto_rent_adapter.py  test_ok_mobility_adapter.py  test_ok_mobility_locations.py  test_recordgo_adapter.py  test_refresh_locations_json_script.py  test_renteon_adapter.py  test_search_api.py  test_search_service.py  test_search_vehicle_contract_file.py  test_search_vehicle_contract_fixtures.py  test_search_vehicle_payload_builder.py  test_sicily_by_car_adapter.py  test_sipp_specs.py  test_sipp_vehicle_integration.py  test_surprice_adapter.py  test_sync_locations_script.py  test_usave_adapter.py  test_vehicle_schema.py  (+1 more)
(+106 files in other folders)
